--- a/pages/counselor/counselor.wxss
+++ b/pages/counselor/counselor.wxss
@@ -1,17 +1,24 @@
 /* pages/counselor/counselor.wxss */
-.pimg{
-  width: 690rpx;
-  height: 386rpx;
+
+.pimg {
+  /* width: 690rpx;
+  height: 386rpx; */
+  width: 600rpx;
+  height: 336rpx;
   box-shadow: 6px 6px 25rpx #ddd;
   border-radius: 20rpx;
 }
-.top3{
+
+.top3 {
   margin-top: 100rpx;
 }
-.permake{
+
+.permake {
   position: absolute;
-  left:420rpx;
-  margin-top:-240rpx;
-width:220rpx;
-font-size:40rpx;
+  /* left:420rpx;
+  margin-top:-240rpx; */
+  left: 400rpx;
+  margin-top: -200rpx;
+  width: 220rpx;
+  font-size: 40rpx;
 }
