--- a/component/header/header.wxml
+++ b/component/header/header.wxml
@@ -1,4 +1,4 @@
-<view style='height:{{height4*2+20}}px' class='nav-wrap'>
+<view wx:if="{{height4<40}}" style='height:{{height4*2+20}}px' class='nav-wrap'>
   <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>{{title}}</view>
   <view style='display: flex; justify-content: space-around;flex-direction: column'>
     <view class='nav-capsule' style='height:{{height4*2 + 48}}px;'>
@@ -14,4 +14,21 @@
     </view>
   </view>
 </view>
-<view style='height:{{height4*2+20}}px;' class='pad'></view>
+<view wx:else style='height:{{height4*2+20-height4/2}}px' class='nav-wrap'>
+  <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>{{title}}</view>
+  <view style='display: flex; justify-content: space-around;flex-direction: column'>
+    <view class='nav-capsule' style='height:{{height4*2 + 48}}px;'>
+      <block wx:if="{{canGoBack}}">
+        <view bindtap='goback'>
+          <image src='../../images/fanhui.png' mode='aspectFill' class='back-pre'></image>
+        </view>
+      </block>
+      <view wx:if="{{canGoIndex}}" bindtap='cGoIndex'>
+        <image src='../../images/shouye22.png' mode='aspectFill' class='back-home'></image>
+      </view>
+      <view style='width:100%;height:{{height4*2+20-height4/2}}px;background-color:#fff;'></view>
+    </view>
+  </view>
+</view>
+<view  wx:if="{{height4<40}}" style='height:{{height4*2+20}}px;' class='pad'></view>
+<view  wx:else style='height:{{height4*2+20-height4/2}}px;' class='pad'></view>
