--- a/pages/indexo/kind.wxml
+++ b/pages/indexo/kind.wxml
@@ -1,9 +1,11 @@
 <wxs module="filter" src="../../utils/getdatr.wxs"></wxs>
-<view style='padding-top:{{height4*2+44+95}}px;' class='wait' wx:if="{{list==''}}">
+<view wx:if="{{height4>40}}" style='padding-top:{{height4*2+44+95-height4/2}}px;'></view>
+<view wx:else style='padding-top:{{height4*2+44+95}}px;;'></view>
+<view class='wait' wx:if="{{list==''}}">
   <image mode='widthFix' src='../../images/loading.svg'></image>
   <view class='f28 ml38'>加载中</view>
 </view>
-<view wx:else style='padding-top:{{height4*2+44+95}}px;' class='body'>
+<view wx:else style='padding-top:0;'  class='body'>
   <view bindtap='goDetail' data-id='{{item.id}}' wx:key="{{item.id}}" class='kinds' wx:for="{{list}}">
     <swiper wx:if="{{item.video==null}}" indicator-active-color="#58d1d3" indicator-dots="true" circular='false' class="kinds-img">
       <swiper-item wx:key="{{index}}" wx:for="{{item.img}}" class="kinds-img">
