--- a/pages/hospital/hospital.wxml
+++ b/pages/hospital/hospital.wxml
@@ -1,26 +1,46 @@
 <wxs module="filter" src="../../utils/getdatr.wxs">
 </wxs>
-<header></header>
-<view  class='wait' wx:if="{{list==''}}">
+<view class='topone'>
+  <view class='nav-wrap2'>
+    <view class='nav-title' style='line-height:{{height4*2 + 44}}px;'>海草日记</view>
+  </view>
+  <view wx:if="{{height4>40}}" style='margin-top:{{height4*2 + 29-height4/2}}px;'></view>
+  <view wx:else style='margin-top:{{height4*2 + 29}}px;'></view>
+  <view  class='r1 ency-hos'>
+  <view data-ex='{{true}}' bindtap='aChange' class='col ency-item'>
+    <view class='{{isHospital==true?"b f32 c00":"f32 c9b"}} cen'>医院</view>
+    <view class='{{isHospital==true?"sm-line":""}}'></view>
+  </view>
+  <view data-ex='{{false}}' bindtap='aChange' class='col ency-item'>
+    <view class='{{isHospital==false?"b f32 c00":"f32 c9b"}} cen'>百科</view>
+    <view class='{{isHospital==false?"sm-line":""}}'></view>
+  </view>
+</view>
+</view>
+<view wx:if="{{height4>40}}" style='padding-top:{{height4*2+44+40-height4/2}}px;'></view>
+<view wx:else style='padding-top:{{height4*2+44+35}}px;;'></view>
+<view class='wait' wx:if="{{list==''}}">
   <image mode='widthFix' src='../../images/loading.svg'></image>
   <view class='f28 ml38'>加载中</view>
 </view>
 <view wx:else>
-<!-- <view>
-  <component-tag-name innerText="Some text"></component-tag-name>
-</view> -->
-<view style='padding-bottom:100rpx;'>
-<navigator hover-class='none' url='../hosdetail/hosdetail?id={{item.id}}' class='hospitals r1 mt30' wx:for="{{list}}" wx:key="{{item.id}}">
-  <view class='col hos-head'>
-    <image mode='aspectFill' class='hos-headimg' src='{{item.headimg.path}}'></image>
-    <view class='hos-score'>{{item.score}}</view>
+  <view style='padding-bottom:100rpx;'>
+    <block wx:if="{{isHospital}}">
+      <navigator hover-class='none' url='../hosdetail/hosdetail?id={{item.id}}' class='hospitals r1 mt30' wx:for="{{list}}" wx:key="{{item.id}}">
+        <view class='col hos-head'>
+          <image mode='aspectFill' class='hos-headimg' src='{{item.headimg.path}}'></image>
+          <view class='hos-score'>{{item.score}}</view>
+        </view>
+        <view class='col hos-na'>
+          <view class='hos-name f32'>{{item.name}}</view>
+          <text wx:if="{{item.address.length<45}}" class='hos-address le1 f28'>{{item.address}}</text>
+          <text wx:else class='hos-address le1 f28'>{{filter.Limit3(item.address,45)}}</text>
+        </view>
+        <image class='hosimg' src='../../images/next.png'></image>
+      </navigator>
+    </block>
+    <block wx:else>
+     <include src="ency.wxml" />
+    </block>
   </view>
-  <view class='col hos-na'>
-    <view class='hos-name f32'>{{item.name}}</view>
-    <text wx:if="{{item.address.length<45}}" class='hos-address le1 f28'>{{item.address}}</text>
-    <text wx:else class='hos-address le1 f28'>{{filter.Limit3(item.address,45)}}</text>
-  </view>
-  <image class='hosimg' src='../../images/next.png'></image>
-</navigator>
-</view>
 </view>
