--- a/pages/audio/audio.wxml
+++ b/pages/audio/audio.wxml
@@ -1,4 +1,11 @@
+<wxs module="filter" src="../../utils/getdatr.wxs" />
 <header title="音频" />
 <view>这是一首歌</view>
-<audio  class='audio' src='https://cloud-minapp-21181.cloud.ifanrusercontent.com/1ggRaDTO41bnXhx4.mp3' id="firstAudio"></audio>
-<button bindtap='paly'>开始播放</button>
+<slider activeColor="#000" value='{{value}}' disabled='{{canSlider}}' bindchange="slider4change" min="{{start}}" max="{{end}}" />
+<view>{{filter.stosh(value)}}</view>
+
+<button bindtap='playBack'>播放背景乐</button>
+<button bindtap='pause'>暂停背景乐</button>
+<button bindtap='seek'>快进</button>
+<open-data type="groupName" open-gid="{{gid}}"></open-data>
+
