--- a/utils/getdatr.wxs
+++ b/utils/getdatr.wxs
@@ -1,7 +1,7 @@
 var filter = {
-  getDate: function (d) {
+  getDate: function(d) {
     var st = d
-    var datetime =getDate(st*1000);
+    var datetime = getDate(st * 1000);
     var year = datetime.getFullYear();
     var month = datetime.getMonth() + 1;
     var hours = datetime.getHours();
@@ -22,28 +22,45 @@ var filter = {
     var dateformat = year + "-" + month + "-" + date + " " + hours + ":" + minutes;
     return dateformat
   },
-  LimitNumbersadf:function(txt) {
+  LimitNumbersadf: function(txt) {
     var str = txt;
     str = str.substring(0, 20);
     str += '...'
     return str;
   },
-  LimitNumbersadf2: function (txt) {
+  LimitNumbersadf2: function(txt) {
     var str = txt;
     str = str.substring(0, 60);
     str += '...'
     return str;
   },
-  LimitNumbersadf3: function (txt,num) {
+  LimitNumbersadf3: function(txt, num) {
     var str = txt;
     str = str.substring(0, num);
     str += '...'
     return str;
   },
+  stohs: function(s){
+    //计算分钟
+    //算法：将秒数除以60，然后下舍入，既得到分钟数
+    var h;
+    h = Math.floor(s / 60);
+    //计算秒
+    //算法：取得秒%60的余数，既得到秒数
+    s = s % 60;
+    //将变量转换为字符串
+    h += '';
+    s += '';
+    //如果只有一位数，前面增加一个0
+    h = (h.length == 1) ? '0' + h : h;
+    s = (s.length == 1) ? '0' + s : s;
+    return h + ':' + s;
+  },
 }
 module.exports = {
   getDate: filter.getDate,
-  Limit:filter.LimitNumbersadf,
+  Limit: filter.LimitNumbersadf,
   Limit2: filter.LimitNumbersadf2,
-  Limit3:filter.LimitNumbersadf3,
+  Limit3: filter.LimitNumbersadf3,
+  stosh: filter.stohs,
 }
