--- a/pages/audio/audio.wxss
+++ b/pages/audio/audio.wxss
@@ -3,3 +3,39 @@
   width: 500rpx;
   height: 200rpx;
 }
+.aswiper{
+  width: 670rpx;
+  height: 400rpx;
+  border-radius: 20rpx;
+}
+.aimage{
+  width: 670rpx;
+  height: 400rpx;
+  border-radius: 20rpx;
+}
+.au-item{
+  width: 670rpx;
+  height: 200rpx;
+  border-radius: 20rpx;
+  border:1rpx solid #f5f5f5;
+}
+.ait-img{
+  width: 150rpx;
+  height: 150rpx;
+  margin-top: 25rpx;
+  border-radius: 20rpx;
+}
+.erji{
+  position:absolute;
+width:50rpx;
+height:50rpx;
+right:60rpx;
+margin-top:75rpx;
+}
+.h-auto{
+  height: 55rpx;
+}
+.col-line{
+  width: 2rpx;
+  height: 50rpx;
+}
