--- a/pages/hospital/hospital.wxss
+++ b/pages/hospital/hospital.wxss
@@ -1,6 +1,6 @@
 /* pages/hospital/hospital.wxss */
 page{
-  background-color: #f0f0f0
+  background-color: #fff;
 }
 .hospitals{
 width:670rpx;
@@ -116,7 +116,208 @@ margin-top:100rpx;
 .hoswiper{
   width: 670rpx;
   height: 400rpx;
+  border-radius:20rpx;
 }
-.srcoll{
-  width: 
+.scroll2{
+  width: 750rpx;
+  height: 200rpx;
+
+}
+.serve-img{
+  width: 70rpx;
+  height: 70rpx;
+}
+.serve-item{
+  width: 80rpx;
+  height: 124rpx;
+}
+.sx-line{
+  width: 100%;
+  height: 4rpx;
+  background-color: #f5f5f5;
+}
+.serve-logo{
+ width:80rpx;
+height:50rpx;
+position:absolute;
+z-index:6;
+margin-top:152rpx;
+
+}
+/* 瀑布流 */
+.falls{
+  width: 670rpx;
+  display:flex;
+  flex-direction: row;
+}
+.aleft{
+  width: 325rpx;
+  display: flex;
+  flex-direction: column;
+}
+.aright{
+  width: 325rpx;
+  display: flex;
+  flex-direction: column;
+}
+.activeImg{
+  width: 325rpx;
+  border-radius: 20rpx;
+}
+/* 新医院列表 */
+.seHospital{
+  width:690rpx;
+  height: 220rpx;
+  border-bottom:1rpx solid #f5f5f5;
+}
+.seHeadimg{
+  height: 150rpx;
+  width: 150rpx;
+  border-radius: 50%;
+}
+.serScore{
+ left:560rpx;
+ margin-top:10rpx;
+
+}
+.se-address{
+  color:#9b9b9b;
+  /* height: 170rpx; */
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width:350rpx;
+}
+/* 新咨询师 */
+.cswiper{
+  width:750rpx;
+  height: 795rpx;
+  margin-top: 30rpx;
+}
+.citem{
+  width: 550rpx;
+  height: 765rpx;
+  margin-left: 100rpx;
+  border-radius:25rpx;
+  
+
+}
+.citem2{
+  width: 450rpx;
+  height: 626rpx;
+  margin-top: 70rpx;
+  margin-left: 1rpx;
+  border-radius:25rpx;
+
+}
+.cimg{
+   width: 550rpx;
+  height: 765rpx;
+  border:1px solid #ddd;
+box-shadow:4rpx 4rpx 25rpx #ddd;
+border-radius:25rpx;
+
+}
+.cimg2{
+  width: 450rpx;
+  height: 626rpx;
+  border-radius:25rpx;
+
+}
+.cbar{
+  color: #fff;
+  /* background:linear-gradient(to right,#58e6c8, #58c2db); */
+  background-color: #000;
+  width:170rpx;
+height:55rpx;
+border-radius:15rpx;
+padding-top:10rpx;
+padding-left:10rpx;
+
+}
+.cpers{
+  margin-left: 40rpx;
+  margin-top: 10rpx;
+}
+.cabs{
+  width: 550rpx;
+  display: block;
+}
+.consbtn{
+  width: 450rpx;
+  color: #fff;
+  /* opacity: 0.8; */
+  background-color:#000;
+border-radius:50rpx;
+line-height:80rpx;
+font-size:36rpx;
+}
+.consbtn:hover{
+  opacity: 1;
+}
+.csk{
+  width:450rpx;
+margin-left:150rpx;
+}
+/* 咨询意向 */
+.tit{
+  width: 550rpx;
+  font-size: 60rpx;
+  margin-top: 50rpx;
+}
+.chose{
+  width: 575rpx;
+  margin-left: 100rpx;
+  flex-wrap:wrap;
+  margin-top:50rpx;
+
+}
+.intitem{
+  width:200rpx;
+  color: #fff;
+  /* background:linear-gradient(to right,#58e6c8, #58c2db); */
+  border-radius:50rpx;
+ height:70rpx;
+ margin-top:20rpx;
+ margin-left:50rpx;
+ padding-top:20rpx;
+ text-align:center;
+ letter-spacing:3rpx;
+}
+.cname{
+  width: 690rpx;
+  padding-bottom: 20rpx;
+  border-bottom: 1rpx solid #ddd;
+  margin-top: 100rpx;
+}
+.cname2{
+  width: 690rpx;
+  padding-bottom: 20rpx;
+  padding-top: 20rpx;
+  border-bottom: 1rpx solid #ddd;
+  position: fixed;
+ 
+  z-index: 99;
+  background-color: #fff;
+}
+.inp{
+  width: 400rpx;
+  font-size: 50rpx;
+  margin-top: 3rpx;
+  height: 60rpx;
+}
+.cbtn{
+  width: 450rpx;
+  line-height: 90rpx;
+  margin-top:80rpx;
+border-radius:50rpx;
+color:#f9f9fc;
+font-weight:bold;
+font-size:40rpx;
+letter-spacing:3rpx;
+}
+.bg1{
+  background:linear-gradient(to right,#58e6c8, #58c2db);
+}
+.bg2{
+  background-color: #cbcbcb;
 }
