--- a/pages/hospital/hospital.wxss
+++ b/pages/hospital/hospital.wxss
@@ -115,17 +115,17 @@ margin-top:100rpx;
 
 .hoswiper{
   width: 670rpx;
-  height: 400rpx;
+  height: 300rpx;
   border-radius:20rpx;
 }
 .scroll2{
   width: 750rpx;
-  height: 200rpx;
+  height: 140rpx;
 
 }
 .serve-img{
-  width: 70rpx;
-  height: 70rpx;
+  width: 60rpx;
+  height: 60rpx;
 }
 .serve-item{
   width: 80rpx;
@@ -137,12 +137,12 @@ margin-top:100rpx;
   background-color: #f5f5f5;
 }
 .serve-logo{
- width:80rpx;
-height:50rpx;
+ width:24rpx;
+height:24rpx;
 position:absolute;
 z-index:6;
-margin-top:152rpx;
-
+margin-top:120rpx;
+margin-left:26rpx;
 }
 /* 瀑布流 */
 .falls{
@@ -259,65 +259,18 @@ font-size:36rpx;
 margin-left:150rpx;
 }
 /* 咨询意向 */
-.tit{
-  width: 550rpx;
-  font-size: 60rpx;
-  margin-top: 50rpx;
-}
-.chose{
-  width: 575rpx;
-  margin-left: 100rpx;
-  flex-wrap:wrap;
-  margin-top:50rpx;
-
-}
-.intitem{
-  width:200rpx;
-  color: #fff;
-  /* background:linear-gradient(to right,#58e6c8, #58c2db); */
-  border-radius:50rpx;
- height:70rpx;
- margin-top:20rpx;
- margin-left:50rpx;
- padding-top:20rpx;
- text-align:center;
- letter-spacing:3rpx;
-}
-.cname{
-  width: 690rpx;
-  padding-bottom: 20rpx;
-  border-bottom: 1rpx solid #ddd;
-  margin-top: 100rpx;
-}
-.cname2{
-  width: 690rpx;
-  padding-bottom: 20rpx;
-  padding-top: 20rpx;
-  border-bottom: 1rpx solid #ddd;
-  position: fixed;
- 
-  z-index: 99;
-  background-color: #fff;
-}
 .inp{
-  width: 400rpx;
-  font-size: 50rpx;
-  margin-top: 3rpx;
-  height: 60rpx;
+ width:646rpx;
+height:80rpx;
+border:1rpx solid #9b9b9b;
+border-radius:15rpx;
+margin-left:2rpx;
+padding-left:20rpx;
 }
 .cbtn{
+  background-color: #000;
+  color: #fff;
+  line-height: 70rpx;
   width: 450rpx;
-  line-height: 90rpx;
-  margin-top:80rpx;
-border-radius:50rpx;
-color:#f9f9fc;
-font-weight:bold;
-font-size:40rpx;
-letter-spacing:3rpx;
-}
-.bg1{
-  background:linear-gradient(to right,#58e6c8, #58c2db);
-}
-.bg2{
-  background-color: #cbcbcb;
+  border-radius:50rpx;
 }
