--- a/pages/hospital/intent.wxml
+++ b/pages/hospital/intent.wxml
@@ -1,19 +1,11 @@
 <form bindsubmit="submit" report-submit='true'>
-<view class='b tit ml40 le3'>您想要了解哪些方面呢？</view>
-<view class='r1 chose f40 b'>
-  <view data-index="{{index}}" data-name="{{item.title}}" data-id="{{item.id}}" bindtap='ischose' wx:for="{{cdata}}" wx:key="{{index}}" class='intitem {{item.id==index ? "bg1" : "bg2"}}'>{{item.title}}</view>
-</view>
-<view class='f28 c8c cen mt30 b'>标签可多选</view>
-<view wx:if="{{elastic==true}}" bindtap='getFocus' class='r1 ml40 cname'>
-  <view class='b ca2 f36 mt10'>您的姓名</view>
-  <input disabled='true' focus='{{focus}}' maxlength='8' bindinput='inputVal' value='{{inputVal}}' class='inp ml40 b'></input>
-  <view wx:if="{{inputVal!=''}}" style='background:linear-gradient(to right,#58e6c8, #58c2db);padding-top:10rpx;height:40rpx;width:50rpx;border-radius:50%;color:#fff;text-align:center;font-size:32rpx;margin-top:10rpx;' class='iconfont icon-xuanze'></view>
-</view>
-<view style='bottom:{{height5-2*height4}}px;' wx:if="{{elastic==false}}" class='r1 ml40 cname2'>
-  <view class='b ca2 f36 mt10 le3'>您的姓名</view>
-  <input focus='{{focus2}}' bindfocus='bindfocus' adjust-position='{{false}}' maxlength='8' bindinput='inputVal' bindblur='bindblur' value='{{inputVal}}' class='inp ml40 b'></input>
-  <view wx:if="{{inputVal!=''}}" style='background:linear-gradient(to right,#58e6c8, #58c2db);padding-top:10rpx;height:40rpx;width:50rpx;border-radius:50%;color:#fff;text-align:center;font-size:32rpx;margin-top:10rpx;' class='iconfont icon-xuanze'></view>
-</view>
-<button form-type="submit" wx:if="{{phone!=undefined&&phone!=null}}" bindtap="{{list.length>=1&&inputVal!=''? 'upload' : ''}}" class='cbtn le1 {{list.length>=1&&inputVal!=""? "bg1" : "bg2" }}'>提交</button>
-  <button wx:else form-type="submit"  open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber" class='cbtn le1 {{list.length>=1&&inputVal!=""? "bg1" : "bg2" }}'>提交</button>
+  <view class='ml40 w670'>
+  <view class='f30 b c00 mt30 le3'>您的姓名</view>
+  <input bindblur="inputName" maxlength='12' value='{{valueName}}' class='inp mt20 f28 le3'></input>
+   <view class='f30 b c00 mt30 le3'>您想查询哪个项目的价格?</view>
+  <input bindblur="inputProject" maxlength='100' value='{{queryProject}}' class='inp mt20 f28 le3'></input>
+  <view class='f28 c9b mt20 le3'>海草日记为您提供主流口碑医院价格清单,变美不花冤枉钱!</view>
+  <button form-type="submit" wx:if="{{phone!=undefined&&phone!=null}}" bindtap="upload" class='cbtn le3 mt50 f28'>开始比价</button>
+  <button form-type="submit" wx:else open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber"  class='cbtn le3 mt50 f28'>开始比价</button>
+  </view>
 </form>
